--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
-    "ajv": "^6.10.0",
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -37,9 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "expect": "^24.5.0",
-    "js-yaml": "^3.13.1",
-    "nwb": "0.23.x",
-    "wait-on": "^3.2.0"
+    "nwb": "0.23.x"
   },
   "author": "C McCallum",
   "homepage": "https://github.com/hms-dbmi/vitessce-grid/",
