--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-grid-layout": "^0.16.6",
-    "react-scripts": "^2.1.8"
+    "react-grid-layout": "^0.16.6"
   },
   "devDependencies": {
     "enzyme": "^3.9.0",
