--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitessce-grid",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A simplified wrapper for react-grid-layout inspired by HiGlass viewconfigs",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -23,7 +23,8 @@
     "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-grid-layout": "^0.16.6"
+    "react-grid-layout": "^0.16.6",
+    "shallowequal": "^1.1.0"
   },
   "devDependencies": {
     "enzyme": "^3.9.0",
