--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react-grid-layout": "^0.16.6",
-    "shallowequal": "^1.1.0"
+    "shallowequal": "^1.1.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "enzyme": "^3.9.0",
@@ -36,10 +38,6 @@
     "expect": "^24.5.0",
     "nwb": "0.23.x",
     "react-scripts": "^3.0.1"
-  },
-  "peerDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
   },
   "author": "C McCallum",
   "homepage": "https://github.com/hms-dbmi/vitessce-grid/",
