--- a/package.json
+++ b/package.json
@@ -11,32 +11,45 @@
     "umd"
   ],
   "scripts": {
-    "build": "nwb build-react-component",
-    "clean": "nwb clean-module && nwb clean-demo",
+    "clean": "rm -r css es lib umd demo",
     "prepublishOnly": "npm run build",
-    "start": "nwb serve-react-demo",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "start": "rollup -c rollup.config.demo.js --environment NODE_ENV:development --watch",
+    "build": "rollup -c rollup.config.lib.js --environment NODE_ENV:production",
+    "test": "karma start karma.config.js --single-run",
+    "test:watch": "karma start karma.config.js --auto-watch",
+    "lint-fix": "eslint -c .eslintrc.yml --ext .js --fix src/"
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-grid-layout": "^0.16.6"
   },
   "devDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.4",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-html": "^0.1.1",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.3.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint": "^6.8.0",
     "expect": "^24.5.0",
-    "nwb": "0.23.x",
-    "react-scripts": "^3.0.1"
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.5",
+    "karma-rollup-preprocessor": "7.0.5",
+    "karma-sourcemap-loader": "0.3.7",
+    "rollup": "^1.29.1",
+    "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-scss": "^2.1.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^5.2.0"
   },
   "author": "C McCallum",
   "homepage": "https://github.com/hms-dbmi/vitessce-grid/",
