--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
-    "css",
     "es",
     "lib",
     "umd"
   ],
   "scripts": {
-    "clean": "rm -r css es lib umd demo",
+    "clean": "rm -r es lib umd demo",
     "prepublishOnly": "npm run build",
     "start": "rollup -c rollup.config.demo.js --environment NODE_ENV:development --watch",
-    "build": "rollup -c rollup.config.lib.js --environment NODE_ENV:production",
+    "build:development": "rollup -c rollup.config.lib.js --environment NODE_ENV:development",
+    "build:production": "rollup -c rollup.config.lib.js --environment NODE_ENV:production",
+    "build": "npm run build:development && npm run build:production",
     "test": "karma start karma.config.js --single-run",
     "test:watch": "karma start karma.config.js --auto-watch",
     "lint-fix": "eslint -c .eslintrc.yml --ext .js --fix src/"
@@ -26,9 +27,8 @@
   "devDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "babel-preset-react-app": "^9.1.2",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-html": "^0.1.1",
@@ -57,5 +57,10 @@
   "repository": "https://github.com/hms-dbmi/vitessce-grid/",
   "keywords": [
     "react-component"
-  ]
+  ],
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  }
 }
