--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build:development": "rollup -c rollup.config.lib.js --environment NODE_ENV:development",
     "build:production": "rollup -c rollup.config.lib.js --environment NODE_ENV:production",
     "build": "npm run build:development && npm run build:production",
-    "test": "karma start karma.config.js --single-run",
-    "test:watch": "karma start karma.config.js --auto-watch",
+    "test": "karma start karma.config.js --single-run --no-auto-watch",
+    "test:watch": "karma start karma.config.js --no-single-run --auto-watch",
     "lint-fix": "eslint -c .eslintrc.yml --ext .js --fix src/"
   },
   "dependencies": {
@@ -25,16 +25,14 @@
     "react-grid-layout": "^0.16.6"
   },
   "devDependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "@babel/core": "^7.9.0",
-    "babel-preset-react-app": "^9.1.2",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-html": "^0.1.1",
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.3.2",
+    "babel-preset-react-app": "^9.1.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "eslint": "^6.8.0",
@@ -43,8 +41,11 @@
     "karma-chrome-launcher": "3.1.0",
     "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
-    "karma-rollup-preprocessor": "7.0.5",
+    "karma-rollup-preprocessor": "^7.0.5",
     "karma-sourcemap-loader": "0.3.7",
+    "mocha": "^7.1.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "rollup": "^1.29.1",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-scss": "^2.1.0",
