--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "lint-fix": "eslint -c .eslintrc.yml --ext .js --fix src/"
   },
   "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "prop-types": "^15.7.2",
     "react-grid-layout": "^0.16.6"
   },
@@ -33,19 +35,27 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-replace": "^2.3.2",
     "babel-preset-react-app": "^9.1.2",
+    "babel-eslint": "10.0.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "^6.8.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-cypress": "^2.2.1",
+    "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.18.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "expect": "^24.5.0",
-    "karma": "4.4.1",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-mocha": "1.3.0",
-    "karma-mocha-reporter": "2.2.5",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
     "karma-rollup-preprocessor": "^7.0.5",
-    "karma-sourcemap-loader": "0.3.7",
+    "karma-sourcemap-loader": "^0.3.7",
     "mocha": "^7.1.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "rollup": "^1.29.1",
     "rollup-plugin-livereload": "^1.0.4",
     "rollup-plugin-scss": "^2.1.0",
