--- a/package.json
+++ b/package.json
@@ -5,38 +5,62 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
-    "css",
     "es",
     "lib",
     "umd"
   ],
   "scripts": {
-    "build": "nwb build-react-component",
-    "clean": "nwb clean-module && nwb clean-demo",
+    "clean": "rm -r es lib umd demo/dist",
     "prepublishOnly": "npm run build",
-    "start": "nwb serve-react-demo",
-    "test": "nwb test-react",
-    "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "start": "rollup -c rollup.config.demo.js --environment NODE_ENV:development --watch",
+    "build:development": "rollup -c rollup.config.lib.js --environment NODE_ENV:development",
+    "build:production": "rollup -c rollup.config.lib.js --environment NODE_ENV:production",
+    "build": "npm run build:development && npm run build:production",
+    "test": "karma start karma.config.js --single-run --no-auto-watch",
+    "test:watch": "karma start karma.config.js --no-single-run --auto-watch",
+    "lint-fix": "eslint -c .eslintrc.yml --ext .js --fix src/"
   },
   "dependencies": {
-    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "prop-types": "^15.7.2",
     "react-grid-layout": "^0.16.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^11.0.1",
+    "@rollup/plugin-html": "^0.1.1",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-replace": "^2.3.2",
+    "babel-preset-react-app": "^9.1.2",
+    "babel-eslint": "10.0.3",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "^5.15.3",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-loader": "3.0.3",
     "eslint-plugin-cypress": "^2.2.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.18.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "expect": "^24.5.0",
-    "nwb": "0.23.x",
-    "react-scripts": "^3.0.1"
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-rollup-preprocessor": "^7.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "mocha": "^7.1.2",
+    "rollup": "^1.29.1",
+    "rollup-plugin-livereload": "^1.0.4",
+    "rollup-plugin-scss": "^2.1.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^5.2.0"
   },
   "author": "C McCallum",
   "homepage": "https://github.com/hms-dbmi/vitessce-grid/",
@@ -44,5 +68,10 @@
   "repository": "https://github.com/hms-dbmi/vitessce-grid/",
   "keywords": [
     "react-component"
-  ]
+  ],
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  }
 }
